- Fix URL generation. - This was causing an issue with expanded classes repositories, unfortunately, and only on Windows (Unix would be ok).
git-svn-id: https://svn.apache.org/repos/asf/tomcat@303210 13f79535-47bb-0310-9956-ffa450edef68